# 42AI_Bootcamp_Python_ML

./: .gitmodules  README.md  init_conda.sh
bootcamp_ml/: linear_regression.ipynb
bootcamp_ml/ML_00/ex00/: matrix.py  test.py
bootcamp_ml/ML_00/ex01/: TinyStatistician.py
bootcamp_ml/ML_00/ex02/: prediction.py
bootcamp_ml/ML_00/ex03/: tools.py
bootcamp_ml/ML_00/ex04/: prediction.py
bootcamp_ml/ML_00/ex05/: plot.py
bootcamp_ml/ML_00/ex06/: loss.py
bootcamp_ml/ML_00/ex07/: vec_loss.py
bootcamp_ml/ML_00/ex08/: plot.py
bootcamp_ml/ML_00/ex09/: other_losses.py
bootcamp_ml/ML_01/ex00/: gradient.py
bootcamp_ml/ML_01/ex01/: vec_gradient.py
bootcamp_ml/ML_01/ex02/: fit.py
bootcamp_ml/ML_01/ex03/: my_linear_regression.py
bootcamp_ml/ML_01/ex04/: linear_model.py
bootcamp_ml/ML_01/ex05/: z_score.py
bootcamp_ml/ML_01/ex06/: minmax.py
bootcamp_ml/ML_02/ex00/: prediction.py
bootcamp_ml/ML_02/ex01/: prediction.py
bootcamp_ml/ML_02/ex02/: loss.py
bootcamp_ml/ML_02/ex03/: gradient.py
bootcamp_ml/ML_02/ex04/: fit.py
bootcamp_ml/ML_02/ex05/: mylinearregression.py
bootcamp_python/Python-00/: filterwords.py
bootcamp_python/Python-00/ex00/: answers.txt
bootcamp_python/Python-00/ex01/: exec.py
bootcamp_python/Python-00/ex05/: kata04.py
bootcamp_python/Python-00/ex10/: loading.py
bootcamp_python/Python-01/ex00/: book.py  recipe.py  test.py
bootcamp_python/Python_02/ex04/: README.md  build.sh  pyproject.toml
bootcamp_python/Python_02/ex04/src/my_minipack/: my_minipack.py
bootcamp_python/ex08/: sos.py
(+34 files in other folders)
